
   - Crypt::* and MIME::Base64 prereqs added in last release are moved to
     optional prereqs

0.40068 Thu Jul 20, 2017
   Add RequestToken field
   Add build_render_list_method
   Accept coderefs for date_start, date_end in Date field

0.40067 Wed Oct 19, 2016
   Fixed Text validation checking, to allow deflations and transformations
   to be applied first.
   change order of processing 'input_without_param' and 'use_fields_for_input_without_param'
    fixes problem with not using default for select field
   fix for deflation of undef value, from ether's pull request 122
   switch from JSON.pm to JSON::MaybeXS
   use coercion on 'options' instead of duplicate code in _load_options
   use [PkgVersion]
   fix bug in TextCSV field caused by setting error for multiple values in Text field

0.40066 Mon Jul 18, 2016
   Improve Select field option list support
   Support arrayref-of-arrayref options in a subroutine
   Allow input_append_button to take input_append_button_element_class
   Allow attributes to be specified for input_append_button
   Add comma digit grouping and custom currency symbol
   Allow input_append_button to take input_append_button_element_class
   Various minor doc updates

0.40065 Sat Mar 19, 2016
   Ensure Text fields only contain a single value
   Make it easier to specify a Select field having identical labels and values.

0.40064 Thu Sep 17, 2015
   Don't warn about date format unless set to `date`
   Wrap checkbox in CheckboxGroup, if requested
   Create es_es.pm
   Create ca_es.pm
   select field invalid value message: encode the select value
   typo in link to the example app
   remove css_class from Captcha field

0.40063 Mon Jun 29, 2015
   Raised Moose prereq to 2.1403 because 2.0604 causes failing tests

0.40062 Fri Jun 25, 2015
   Separate out test using Type::Tiny::Enum to skip_all

0.40061 Thu Jun 25, 2015
   Add skip for Type::Tiny::Enum

0.40060 Wed Jun 24, 2015
   Field validation can use Type::Tiny subclasses